--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ pydantic==1.7.4
 pyodbc===4.0.0-unsupported
 pyparsing==2.4.7
 python-dateutil==2.8.1
+python-dotenv==0.17.1
 pytz==2021.1
 regex==2021.4.4
 requests==2.25.1
