--- a/requirements.txt
+++ b/requirements.txt
@@ -1,112 +1,50 @@
-appnope @ file:///opt/concourse/worker/volumes/live/4f734db2-9ca8-4d8b-5b29-6ca15b4b4772/volume/appnope_1606859466979/work
-argon2-cffi @ file:///opt/concourse/worker/volumes/live/4afd07c8-7fc3-4a09-6326-d8c70269eb33/volume/argon2-cffi_1613037490059/work
-async-generator==1.10
-attrs @ file:///tmp/build/80754af9/attrs_1620827162558/work
-backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
 beautifulsoup4==4.9.3
-bleach @ file:///tmp/build/80754af9/bleach_1612211392645/work
 blis==0.7.4
-bokeh==2.3.2
-boto3==1.17.82
-botocore==1.20.82
+boto3==1.17.102
+botocore==1.20.102
 catalogue==2.0.4
 certifi==2021.5.30
-cffi @ file:///opt/concourse/worker/volumes/live/ca3c0fea-9d0f-4489-6889-89b42078ed37/volume/cffi_1613246931142/work
 chardet==4.0.0
 click==7.1.2
-cloudpickle==1.6.0
 cymem==2.0.5
-dask==2021.6.0
-decorator @ file:///tmp/build/80754af9/decorator_1621259047763/work
-defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
-distributed==2021.6.0
-dynamof==2.1.8
 en-core-web-trf @ https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.0.0/en_core_web_trf-3.0.0-py3-none-any.whl
-entrypoints==0.3
 filelock==3.0.12
-fsspec==2021.6.0
-future==0.18.2
-HeapDict==1.0.1
+huggingface-hub==0.0.8
 idna==2.10
-importlib-metadata==4.3.0
-ipykernel @ file:///opt/concourse/worker/volumes/live/73e8766c-12c3-4f76-62a6-3dea9a7da5b7/volume/ipykernel_1596206701501/work/dist/ipykernel-5.3.4-py3-none-any.whl
-ipython @ file:///opt/concourse/worker/volumes/live/f33fa11b-d908-43e8-693a-f4b58d8c695c/volume/ipython_1617120878195/work
-ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
-jedi==0.17.0
 Jinja2==3.0.1
 jmespath==0.10.0
 joblib==1.0.1
-jsonschema @ file:///tmp/build/80754af9/jsonschema_1602607155483/work
-jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1616770841739/work
-jupyter-core @ file:///opt/concourse/worker/volumes/live/a699b83f-e941-4170-5136-bf87e3f37756/volume/jupyter_core_1612213304212/work
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
-locket==0.2.1
-MarkupSafe @ file:///opt/concourse/worker/volumes/live/2165c944-5d03-464f-57c1-1df4e51b3ac3/volume/markupsafe_1621528146825/work
-mistune==0.8.4
-msgpack==1.0.2
+MarkupSafe==2.0.1
 murmurhash==1.0.5
-nbclient @ file:///tmp/build/80754af9/nbclient_1614364831625/work
-nbconvert @ file:///opt/concourse/worker/volumes/live/d4b0787b-b6c8-4d28-5453-3381885d5b33/volume/nbconvert_1601914848300/work
-nbformat @ file:///tmp/build/80754af9/nbformat_1617383369282/work
-nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1613680548246/work
 nltk==3.6.2
-notebook @ file:///opt/concourse/worker/volumes/live/f984e24b-6ef4-4a5b-55be-c5db1417e27a/volume/notebook_1621528337539/work
-numpy==1.20.3
-packaging @ file:///tmp/build/80754af9/packaging_1611952188834/work
-pandas==1.2.4
-pandocfilters @ file:///opt/concourse/worker/volumes/live/315ac9bb-93fd-4adc-6795-345692fcfaed/volume/pandocfilters_1605120446899/work
-parso @ file:///tmp/build/80754af9/parso_1617223946239/work
-partd==1.2.0
-pathy==0.5.2
-pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
-Pillow==8.2.0
+numpy==1.21.0
+packaging==20.9
+pandas==1.2.5
+pathy==0.6.0
 preshed==3.0.5
-prometheus-client @ file:///tmp/build/80754af9/prometheus_client_1623189609245/work
-prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1616415428029/work
-psutil==5.8.0
-ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
 pydantic==1.7.4
-Pygments @ file:///tmp/build/80754af9/pygments_1621606182707/work
-pyodbc===4.0.0-unsupported
-pyparsing @ file:///home/linux1/recipes/ci/pyparsing_1610983426697/work
-pyrsistent @ file:///opt/concourse/worker/volumes/live/656e0c1b-ef87-4251-4a51-1290b2351993/volume/pyrsistent_1600141745371/work
-python-dateutil @ file:///home/ktietz/src/ci/python-dateutil_1611928101742/work
-python-dotenv==0.17.1
+pyparsing==2.4.7
+python-dateutil==2.8.1
+python-dotenv==0.18.0
 pytz==2021.1
-PyYAML==5.4.1
-pyzmq==20.0.0
 regex==2021.4.4
 requests==2.25.1
 s3transfer==0.4.2
 sacremoses==0.0.45
-Send2Trash @ file:///tmp/build/80754af9/send2trash_1607525499227/work
-six @ file:///tmp/build/80754af9/six_1623709665295/work
-smart-open==3.0.0
-sortedcontainers==2.4.0
+six==1.16.0
+smart-open==5.1.0
 soupsieve==2.2.1
 spacy==3.0.6
 spacy-alignments==0.8.3
-spacy-legacy==3.0.5
-spacy-transformers==1.0.2
+spacy-legacy==3.0.6
+spacy-transformers==1.0.3
 srsly==2.4.1
-tblib==1.7.0
-terminado==0.9.4
-testpath @ file:///home/ktietz/src/ci/testpath_1611930608132/work
-thinc==8.0.3
+thinc==8.0.6
 tokenizers==0.10.3
-toolz==0.11.1
-torch==1.8.1
-tornado @ file:///opt/concourse/worker/volumes/live/d531d395-893c-4ca1-6a5f-717b318eb08c/volume/tornado_1606942307627/work
-tqdm==4.61.0
-traitlets @ file:///home/ktietz/src/ci/traitlets_1611929699868/work
-transformers==4.5.1
+torch==1.9.0
+tqdm==4.61.1
+transformers==4.6.1
 typer==0.3.2
 typing-extensions==3.10.0.0
-urllib3==1.26.5
+urllib3==1.26.6
 wasabi==0.8.2
-wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
-webencodings==0.5.1
-zict==2.0.0
-zipp @ file:///tmp/build/80754af9/zipp_1615904174917/work
